--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@
   --senary-color: white;
   --septenary-color: #b1b7cd;
 }
+body {
+  background-image: url(images/pattern-background-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  padding: 20px;
+  font-family: "Red Hat Display", sans-serif;
+}
