--- a/style.css
+++ b/style.css
@@ -35,3 +35,17 @@ main {
   padding: 0 20px;
   border-radius: 0px 0px 15px 15px;
 }
+
+.title {
+  text-align: center;
+  margin: 20px;
+  font-weight: 900;
+  font-size: 20px;
+}
+.paragraph {
+  font-weight: 500;
+  text-align: center;
+  font-size: 14px;
+  color: var(--septenary-color);
+  max-width: 230px;
+}
