--- a/style.css
+++ b/style.css
@@ -83,3 +83,33 @@ main {
   position: absolute;
   right: 0px;
 }
+
+
+.mini-card a:hover {
+  text-decoration: none;
+  color: var(--secondary-color-light);
+}
+.submit,
+.cancel {
+  padding: 12px;
+  margin: 5px;
+  width: 85%;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform 50ms ease-in-out;
+}
+
+.submit:active,
+.cancel:active {
+  transform: scale(0.85);
+}
+.submit {
+  background-color: var(--secondary-color);
+  box-shadow: 0px 8px 5px var(--secondary-color-shadow);
+  font-weight: 900;
+  color: var(--senary-color);
+}
+.submit:hover {
+  background-color: var(--secondary-color-light);
+}
