--- a/style.css
+++ b/style.css
@@ -121,3 +121,19 @@ main {
 .cancel:hover {
   color: unset;
 }
+
+@media screen and (min-width: 600px) {
+  main {
+    max-width: 350px;
+    margin: 0 auto;
+    margin-top: 5vh;
+  }
+  body {
+    background: url(images/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+  .paragraph {
+    max-width: 300px;
+  }
+}
